# DescriptorsComparison

./: CMakeLists.txt  README.md
SettingsGenerator/: CMakeLists.txt  SettingsGenerator.kdev4  all_settings_descriptors_comparison.yml  main.cpp  settingsgenerator.cpp  settingsgenerator.h
config/: BRIEF.yml  BRIEF.yml~  BRISK.yml  BRISK.yml~  FAST.yml  FAST.yml~  FREAK.yml  FREAK.yml~  GFTT.yml~  MSER.yml  MSER.yml~  ORB.yml  ORB.yml~  SIFT.yml  SIFT.yml~  STAR.yml  STAR.yml~  SURF.yml  SURF.yml~  all_settings_descriptors_comparison.yml~  global_config.yml  global_config.yml~
src/: main.cpp
src/SettingsGenerator/: yamlobjectscreationstrategy.cpp  yamlobjectscreationstrategy.h  yamlparameterizedobject.cpp  yamlparameterizedobject.h
